# advanced-shape-detection

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  SECURITY.md  adaptive_detector.py  advanced_shape_detection.py  comparison_summary.py  demo_shape_detector.py  docker-compose.yml  enhanced_thin_line_detector.py  image_map_coordinate_extractor.py  intelligent_shape_detector.py  petak_coordinates_60_edit.json  petak_optimizer.py  precise_shape_detector.py  pyproject.toml  requirements.txt  robust_detector.py  setup.py  setup_github.py  shape_coordinates_60_edit.json  shape_detection.py  simple_precise_detector.py  test_system.py  ultra_precise_detector.py  ultra_sensitive_detector.py
.github/workflows/: ci.yml
tests/: __init__.py  test_shape_detection.py
